<resources>
    <string name="app_name">GameTetris</string>
    <string name="titulo">Tetris</string>
    <string name="novo_jogo">Novo Jogo</string>
    <string name="continuar">Continuar</string>
    <string name="configurar">Configurar</string>
    <string name="left">Esquerda</string>
    <string name="right">Direita</string>
    <string name="baixo">Baixo</string>
    <string name="pontos">Pontos</string>
    <string name="girar">Girar</string>
    <string name="total">0</string>
    <string name="pausa">| |</string>
    <string name="dificil">Dificil</string>
    <string name="medio">Medio</string>
    <string name="config">Configurações do Jogo</string>
    <string name="dificuldades">Dificuldade</string>
    <string name="confimar">OK</string>
    <string name="cancelar">Cancelar</string>
    <string name="facil">Fácil</string>
    <string name="game_over">Game Over</string>
    <string name="pontuacao">Pontuação: </string>
    <string name="record">Record: </string>
    <string name="record_pontos">0</string>
    <string name="novo_record">Novo Record!</string>
    <string name="sair">Sair</string>
</resources>