<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/gameoverLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fundo1"
        android:orientation="vertical"
        tools:context=".GameOverActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fimdejogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/game_over"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="65sp" />

            <LinearLayout
                android:id="@+id/currentPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pontuacao"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/pontos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pontos"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="32sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/currentRecordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/record"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/ultimo_recorde"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_pontos"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="32sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/newRecordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/novo_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/novo_record"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="32sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="34dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tetris"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/titulo"
                android:textColor="#FFFF8800"
                android:textSize="74sp" />

            <Button
                android:id="@+id/novo_jogo"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/novo_jogo"
                android:textColor="#FFFF8800" />

            <Button
                android:id="@+id/sair"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sair"
                android:textColor="#FFFF8800" />
        </LinearLayout>

    </LinearLayout>

</layout>
